# master-thesis

./: .example.env  .gitignore  README.md  main.py  pre-commit-config.yaml  pyproject.toml
docker/: train.dockerfile
experiments/: do_vs_dont_formulation_arc.yml  do_vs_dont_formulation_cosmos.yml  do_vs_dont_formulation_twitter.yml  instruction_context_separation_arc.yml  instruction_context_separation_cosmos.yml  instruction_context_separation_imdb.yml  instruction_context_separation_imdb_baseline_only.yml  instruction_context_separation_twitter.yml  instruction_itemization_arc.yml  instruction_itemization_cosmos.yml  instruction_itemization_imdb.yml  instruction_itemization_twitter.yml  language_correctness_arc.yml  language_correctness_cosmos.yml  language_correctness_imdb.yml  language_correctness_twitter.yml
experiments/templates/: arc_system.jinja2  cosmos_system.jinja2  dvd_arc_baseline.jinja2  dvd_arc_negative.jinja2  dvd_cosmos_baseline.jinja2  dvd_cosmos_negative.jinja2  dvd_twitter_baseline.jinja2  dvd_twitter_negative.jinja2  dvd_twitter_system.jinja2  ics_arc_baseline.jinja2  ics_arc_hash_separator.jinja2  ics_arc_triple_quote_separator.jinja2  ics_cosmos_baseline.jinja2  ics_cosmos_hash_separator.jinja2  ics_cosmos_triple_quote_separator.jinja2  ics_imdb_baseline.jinja2  ics_imdb_hash_separator.jinja2  ics_imdb_triple_quote_separator.jinja2  ics_twitter_baseline.jinja2  ics_twitter_hash_separator.jinja2  ics_twitter_triple_quote_separator.jinja2  ii_arc_itemized.jinja2  ii_cosmos_baseline.jinja2  ii_cosmos_itemized.jinja2  ii_imdb_baseline.jinja2  ii_imdb_itemized.jinja2  ii_imdb_system.jinja2  ii_twitter_baseline.jinja2  ii_twitter_itemized.jinja2  ii_twitter_system.jinja2  imdb_system.jinja2  imdb_user_base.jinja2  lc_arc_baseline.jinja2  lc_arc_errors.jinja2  lc_arc_idiomatic_errors.jinja2  lc_cosmos_baseline.jinja2  lc_cosmos_errors.jinja2  lc_cosmos_errors_2.jinja2  lc_cosmos_idiomatic_errors.jinja2  lc_imdb_baseline.jinja2  (+7 more)
src/: constants.py  logger.py  main.py  settings.py
src/evaluation_tasks/: arc_multiple_choice_qa.py  base.py  cosmos_multiple_choice_qa.py  enums.py  exceptions.py  factory.py  schema.py  utils.py  (+2 more)
(+123 files in other folders)
