[tool.poetry]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = ["Boris Rakovan <b.rakovan@gmail.com>"]
readme = "README.md"
packages = [{include = "master_thesis"}]

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.2.0"
openai = "^1.10.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
jinja2 = "^3.1.2"
tabulate = "^0.9.0"
numpy = "^1.26.2"
requests = "^2.31.0"
mypy = "^1.7.1"
scipy = "^1.12.0"
google-cloud-aiplatform = "^1.43.0"
datasets = "^2.18.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.3"
pre-commit = "^3.5.0"
pytest = "^8.0.2"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

